Fix missalignment of buttons

--- a/src/index.scss
+++ b/src/index.scss
@@ -45,13 +45,13 @@ main {
 
 .btnLogin {
   width: 200px;
-  left: calc(50vw - 100px);
+  left: calc(50% - 100px);
   top: calc(50vh - 100px);
 }
 
 .btnSubscribe {
   width: 200px;
-  left: calc(50vw - 100px);
+  left: calc(50% - 100px);
 }
 
 .imgBookItem {
